[package]
name = "etch"
version = "0.1.0"
edition = "2024"
description = "Lightweight embedded store with Write-Ahead Log"
license = "MIT"
repository = "https://github.com/tell-rs/etch"
authors = ["Tell Contributors"]

[dependencies]
xxhash-rust = { version = "0.8", features = ["xxh3"] }
parking_lot = "0.12"
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
