[package]
name = "etchdb"
version = "0.2.2"
edition = "2024"
description = "A fast, embedded database for Rust. 5 dependencies. No C code. No build scripts."
license = "MIT"
repository = "https://github.com/tell-rs/etch"
authors = ["Tell Contributors"]

[dependencies]
xxhash-rust = { version = "0.8", features = ["xxh3"] }
parking_lot = "0.12"
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[[bench]]
name = "bench"
harness = false
